--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue Starter</title>
+    <title>生肖諧音字產生器</title>
+    <link rel="preconnect" crossorigin="anonymous" href="https://fonts.bunny.net">
+    <link rel="stylesheet" crossorigin="anonymous" href="https://fonts.bunny.net/css2?family=Noto+Sans+TC:wght@400&family=Noto+Serif+TC:wght@300;400;700&display=swap">
   </head>
   <body>
     <div id="app"></div>
