Add description & og meta

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>生肖諧音字產生器</title>
     <link rel="preconnect" crossorigin="anonymous" href="https://fonts.bunny.net">
     <link rel="stylesheet" crossorigin="anonymous" href="https://fonts.bunny.net/css2?family=Noto+Sans+TC:wght@400&family=Noto+Serif+TC:wght@300;400;700&display=swap">
+    <meta name="description" content="一起來產生生肖諧音字~">
+    <meta property="og:url" content="https://zodiac-homophone-generator.vercel.app/">
+    <meta property="og:title" content="生肖諧音字產生器">
+    <meta property="og:description" content="一起來產生生肖諧音字~">
+    <meta property="og:image" content="https://zodiac-homophone-generator.vercel.app/ogimage-20240904.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="生肖諧音字產生器">
+    <meta name="twitter:description" content="一起來產生生肖諧音字~">
+    <meta name="twitter:image" content="https://zodiac-homophone-generator.vercel.app/ogimage-20240904.png">
   </head>
   <body>
     <div id="app"></div>
